src/objects/FC_Approval_Threshold_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Cancellation_Approval_Amount__c</fullName>
        <description>The cancellation approval process will be invoked if the Quote Value is less than or equal to this amount.</description>
        <label>Cancellation Approval Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consulting_Quote_Total_Amount__c</fullName>
        <label>Consulting Quote Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Consulting_Charge_Total__c</fullName>
        <label>Non-Consulting Charge Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Consulting_Quote_Total_Amount__c</fullName>
        <label>Non-Consulting Quote Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Discount_Percentage__c</fullName>
        <label>Quote Discount Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retainer_Rate_Plan_Amount__c</fullName>
        <label>Retainer Rate Plan Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>(FC) Approval Threshold Settings</label>
</CustomObject>